# cpp-caf-experiment

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  main.cpp  sensor.proto
net/: Server.cpp
src/: CMakeLists.txt  functiona_server.cpp  main.cpp  main.h
src/net/: AtomMessages.h  ConnectionActor.cpp  ConnectionActor.h  INetworkConfiguration.h  Parser.cpp  Parser.h  Server.h  ServerActor.cpp  ServerActor.h
tests/: CMakeLists.txt  conanfile.txt  test.cpp
